# rumo

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml
examples/: describe_dataframe.py  good.csv  sample.csv  sample.rls  sample.ttl
examples/results/: good.csv
src/: lib.rs  main.rs  rules.rs
