[package]
name = "rumo"
version = "0.1.0"
edition = "2021"
description = "DataFrame information library with Python bindings"
license = "MIT"

[lib]
name = "rumo"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rumo"
path = "src/main.rs"

[features]
default = []
python = ["dep:pyo3", "dep:pyo3-polars", "pyo3/extension-module"]
rules = ["dep:nemo", "dep:tokio"]

[dependencies]
polars = { version = "0.53", features = ["csv"] }
clap = { version = "4", features = ["derive"] }
pyo3 = { version = "0.27", optional = true }
pyo3-polars = { version = "0.26", optional = true }
nemo = { git = "https://github.com/knowsys/nemo", tag = "v0.9.1", optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
